@@ -10,6 +10,7 @@ DIST Zope-3.3.1.tgz 6594248 RMD160 11bf3b8c899518a5965f21a4a372912a4bc1438d SHA1
 DIST Zope2-2.12.5.zip 2447951 RMD160 3598235e5474e2e91f4e068111cf49f17f5ffdaa SHA1 ce4d993686da3d91e659366b4f89f2d934645e24 SHA256 9482efc0a75e42fdbed507cacfaccbd7f33fe39fed612e5857920dd341d149e5
 DIST Zope2-2.12.6.zip 2372167 RMD160 0aa80eb090c17ad3531654583a16d9f0d34f642f SHA1 3e8db5af4d79672246c6e5eb9bf95f48a13eaa5e SHA256 f4584cd91d80405dbece5a9ff0d4358cfdea98edc89dbc9e24511c58a24afc1f
 DIST Zope2-2.12.7.zip 2377968 RMD160 3501250d35759fa36a4629205378338e9f12a68d SHA1 9a335c49d1710937917d0dc77141b915f24f1322 SHA256 4b1e3413ce6f27d181e91aeecf01d132ba87d434e301514e10f7338b0f0695e3
+DIST Zope2-2.12.8.zip 2382418 RMD160 e229eb890931dddd11bc05266139e5bfee67c982 SHA1 b870e65959dbf713ca1fc32e8f82154af4fc912a SHA256 40ceda18f0eec2fbc734c22849cbd4cc8ccee00cb8aa0d4745910ba3539c0bea
 EBUILD zope-2.10.11.ebuild 2334 RMD160 5628a00cce8b9dfcd847049528cc13c6c41c401d SHA1 1fabddbc3731fc9cb9344fe05970cbf5f14d8438 SHA256 ec30cd035f75578d46a9588a50c973abdad2eb54a8a0d8e2f6914a2a9cccb7d9
 EBUILD zope-2.10.7-r1.ebuild 2419 RMD160 a8eacc97fc3ec0d837e130c19b6160c51087054f SHA1 6cb14047b90e25b36582dc1b77296fd7033a1421 SHA256 b9fc3ccc0f925043e4999bc40d077ac3f927987fb72a4e2db3c1d2e9dac78f69
 EBUILD zope-2.10.7.ebuild 2378 RMD160 b5aec5e9ff6fc8081dff21d3ab5049929922712d SHA1 8a7d41e475abb6efd60b1212e8520f862d804f8b SHA256 641c43f253d26a75a926283f5a5c8dadc65797cf605984b5d1b185c1161e8845
@@ -17,10 +18,11 @@ EBUILD zope-2.10.9.ebuild 2337 RMD160 7c7c5d215a96ecad33a10810e0d9c8e1d9dd9400 S
 EBUILD zope-2.12.5.ebuild 4028 RMD160 501cedaa61e09838f72dab33a6850a73fcff5671 SHA1 4bf8ee12d3206a9eb8584d450306ca5d49c42651 SHA256 58f28b9d65a3150e1c73cb9578ae57f942ab9f617a8db071a9140146481c2497
 EBUILD zope-2.12.6.ebuild 4249 RMD160 e69d8989189bd537d3159a74263d319e7a990e8b SHA1 ffeb89cf2dedbac6b5eb0dda4a019dd36fe47d84 SHA256 d194640b4411cbfb29de04f6c43634db6ef09e0db15912f76109070f04a6746f
 EBUILD zope-2.12.7.ebuild 4249 RMD160 ba9a6e23b3ad44877e47787fe4fc3c95882d232b SHA1 480d41f212fc4f9c2b7117403fa3cefb40a634e7 SHA256 dc9762134fd7f3342708e13e1817d5ff367c2bcb4a86fa4fc9996a939196de10
+EBUILD zope-2.12.8.ebuild 4249 RMD160 8c92952e1effd7f1757c837247c354552b664dbf SHA1 989df89b80541c848692a0418989bb383a327d1b SHA256 4db462f8fe4ab0fe39c47e1b0247b32b239196879464f7e8f79f34dd396252cf
 EBUILD zope-2.9.10-r1.ebuild 2439 RMD160 4d893fe82971f3d3a6b5bf47873c272ec732329b SHA1 930744cecdff3eed82705332bb505b9d5abbf486 SHA256 057741f43d33bd395e4bf69a1706931c5dcae18cd4f5e7e94d849a85dcde6345
 EBUILD zope-2.9.10.ebuild 2397 RMD160 e33501ae1658b572c23e9383492215c2af0cc5b1 SHA1 fabcdb45cce3c0ae12e3f77e12a2122f409f13ec SHA256 c2ccd01a1e47987ef0a82c2803decdb85bc189e955b2c6c6c62186c897164a04
 EBUILD zope-2.9.12.ebuild 2356 RMD160 77459a869dd0925c53572055e901fa1e710128f1 SHA1 2abb52de300d7d67c1f5f13600310cbc37264dfd SHA256 55a08e94da72603b68859f3dd91595fb8d2fc481378e5e0c868265dc396f164d
 EBUILD zope-3.2.2.ebuild 3624 RMD160 e74adaedc41a265b71fd583d87b6f33b34448c0a SHA1 5632e19dc545b80c4ebe734119d81c39fe2b101e SHA256 82e0e16be113e8e2c7f4ca11ef1fa3dc24b96ca4a65161909c4c58999779d57d
 EBUILD zope-3.3.1.ebuild 3429 RMD160 4951ab3da1c9adc918f0a093a4bfac6deceba2b5 SHA1 5aefef7e3cf1cfc22674510ec6c78b4d8bcc6448 SHA256 7cc2aa03f0e77a65a6fc93aa01755a7eb41de30384366fd963172389606cc139
-MISC ChangeLog 27050 RMD160 8722ac059af0152e8a36beb84bb31cb9acd6ea09 SHA1 fae848c262862fce12b0b90f4a50b91048ca4205 SHA256 fd1646c590aa101418d580feb11c5408142582c1bf7989ca1169becb48837d23
+MISC ChangeLog 27191 RMD160 f02084395f47b0e4955b347343c8d3e86f59a76c SHA1 752e25dcb1be6f1d78175ca61655578ebea02839 SHA256 b3a2b6026b056ec0d49a12ec085dba6169060d1ac283ddd6083735c73f2b3911
 MISC metadata.xml 161 RMD160 5e136d45f811478292bd2ee1798a9b0229ffe468 SHA1 9755179a2dee0511818b1f6738ded28e335e1b9a SHA256 e69ac7205cbc2e42a297e20d8f08922003390a345bbf50ccf00d1158a1c97cc5
