@@ -1,6 +1,12 @@
 # ChangeLog for net-zope/zope
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.176 2010/07/04 06:47:09 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.177 2010/07/04 06:53:34 arfrever Exp $
+
+*zope-2.12.8 (04 Jul 2010)
+
+  04 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +zope-2.12.8.ebuild:
+  Version bump.
 
 *zope-2.12.7 (04 Jul 2010)
 
